[package]
name = "mgpg" # Mattermost GPG Client
version = "0.1.0"
description = "A mattermost client for conveniently encrypting messages using GnuPG via GPGME."
repository = "https://github.com/marcelbuesing/mgpg"
documentation = "https://docs.rs/mgpg"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
readme = "README.md"

[dependencies]
async-std = "0.99"
colored = "1.8"
dialoguer = "0.5"
dirs = "2.0"
futures-preview = "= 0.3.0-alpha.18"
gpgme = "0.9"
keyring = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
surf = "1.0"
thiserror = "1.0"